# CSE-6242-Spring-2023

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
sentiments/: inference.py  train.py
src/: app.py
src/imports/ner/: ner_results.csv  ner_results_flatt.csv  tweet_ner.ipynb
src/imports/sentiments/: inference.py  sentiment_results.csv  train.py
