[tool.poetry]
name = "6242 Team 166 Project"
version = "1.0.0"
description = "Team 166's Project Repository"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.3"
flask = "^2.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9"
isort = "^5.8"
mypy = "^0.812"
pytest = "^6.2.4"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
